# MeshSimplificationRL

./: .gitignore  LICENSE  README.md  customenv.py  settings.py
AgentV1/: PPO.py  TRPO.py  custom_env.py  ppo_plot.py  settings.py  trpo_plot.py
AgentV2/: custom_env_v2.py  ppo.py  ppo_plot.py  sac.py  settings.py  td3.py  td3_plot.py
MeshEnvironmentCPP/: .gitignore  CMakeLists.txt  atomic.cpp  client.py  errormetric.cpp  errormetric.hpp  halfedge.h  halfedgemesh.cpp  halfedgemesh.h  halfedgeutils.cpp  main.cpp  meshenv.cpp  meshenv.h  meshenvV2.cpp  simplify.cpp  simplify.py
MeshEnvironmentCPP/util/: tiny_obj_loader.h
ModelV1/: README.md
meshenv/: CMakeLists.txt  atomic.cpp  halfedge.h  halfedgemesh.cpp  halfedgemesh.h  halfedgeutils.cpp  main.cpp  meshenv.cpp  meshenv.h  simplify.cpp  simplify.py
modelV1/: TRPO.py  customenv.py  settings.py
